feat: Implement review consolidation utility
- Added `consolidateReview.ts` to handle multi-pass review consolidation into a single report.
- Introduced client configuration management for different AI models.
- Created prompts for system and user to guide the consolidation process.
- Implemented fallback mechanism for consolidation in case of API failures.

feat: Add template management utilities

- Created `index.ts` to export template utility functions.
- Developed `promptTemplateManager.ts` for managing prompt templates with Handlebars.
- Implemented `templateLoader.ts` to load and compile Handlebars templates from the promptText directory.
- Added support for framework and language-specific templates, including variable loading and rendering.

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,12 @@ fix-*.md
 force-*.sh
 
 **/.claude/settings.local.json
-test-projects/typescript
+# Keep test projects for framework detection but ignore generated output
+test-projects/**/node_modules/
+test-projects/**/.cache/
+test-projects/**/dist/
+test-projects/**/build/
+test-projects/**/.env
+test-projects/**/__pycache__/
+test-projects/**/*.pyc
+test-projects/**/vendor/
