--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "./dist/index.js",
   "scripts": {
     "prebuild": "rm -rf dist",
-    "build": "pnpm run test && pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
+    "build": "npm run test && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
     "build:types": "tsc --emitDeclarationOnly",
     "postbuild": "./scripts/link-global.sh",
     "start": "node dist/index.js",
@@ -14,7 +14,7 @@
     "local": "ts-node --transpile-only -r tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "pnpm run validate:prompts && jest --no-cache",
+    "test": "npm run validate:prompts && jest --no-cache",
     "test:e2e": "node scripts/e2e-test.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
@@ -25,13 +25,13 @@
     "test:api": "ts-node src/test-api-connections.ts",
     "validate:models": "node scripts/validate-models.js",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "pnpm run build && pnpm run validate:models",
+    "prepublishOnly": "npm run build && npm run validate:models",
     "local-review": "./scripts/runners/local-ai-review.sh",
     "built-review": "./scripts/runners/built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
     "validate:prompts": "node scripts/validate-prompts.js",
     "update:prompts": "node scripts/update-prompts-frontmatter.js",
-    "quick-build": "pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
+    "quick-build": "npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
     "consolidate": "ts-node scripts/consolidate-review.ts"
   },
   "keywords": [
