fix: resolve various TypeScript errors and improve module import handling
- Fixed import style in multiple files to use namespace imports for better compatibility
- Updated TSConfig to enable downlevelIteration and allowSyntheticDefaultImports
- Removed unused variable jsonReview in formatAsJson function
- Removed unused variable toolDirectory in index.ts
- Fixed Headers API usage in anthropicApiClient for better type safety

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
