feat: code organization improvements (addresses #48)
- Automate version synchronization between package.json and src/index.ts
  - Added scripts/sync-version.js to sync VERSION constant
  - Integrated into build process via prebuild hook
  - Added npm run version:sync for manual syncing

- Remove duplicate apiUtils.ts re-export file
  - Updated imports to use src/utils/api/apiUtils directly
  - Removed unnecessary re-export file

- Add deprecation notice to projectDocs.ts re-export
  - Marked as deprecated with TODO for future migration
  - Kept for backward compatibility due to extensive usage

- Automate model map synchronization
  - Added scripts/sync-model-maps.js to generate JS from TS source
  - Integrated into build process
  - Added npm run models:sync for manual syncing

- Consolidate test files
  - Moved all tests from src/tests/ to src/__tests__/
  - Maintained directory structure (e.g., integration tests)
  - Removed empty src/tests/ directory

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "prebuild": "rm -rf dist",
-    "build": "npm run test && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
+    "prebuild": "rm -rf dist && node scripts/sync-version.js",
+    "build": "npm run test && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js && node scripts/sync-model-maps.js",
     "build:types": "tsc --emitDeclarationOnly",
     "ci:local": "./scripts/ci-local.sh",
     "postbuild": "./scripts/link-global.sh",
@@ -25,8 +25,10 @@
     "test:latest": "ts-node src/test-latest.ts",
     "test:api": "ts-node src/test-api-connections.ts",
     "validate:models": "node scripts/validate-models.js",
+    "version:sync": "node scripts/sync-version.js",
+    "models:sync": "node scripts/sync-model-maps.js",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "npm run build && npm run validate:models",
+    "prepublishOnly": "npm run version:sync && npm run build && npm run validate:models",
     "local-review": "./scripts/runners/local-ai-review.sh",
     "built-review": "./scripts/runners/built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
