feat: reorganize documentation and configure TypeScript path aliases
- Reorganize documentation into subdirectories:
  - api/ - API documentation
  - development/ - Developer guides and setup
  - guides/ - User guides and tutorials
  - architecture/, bugs/, design/, features/, issues/, tasks/, todos/ - existing directories

- Move documents to appropriate subdirectories:
  - Development docs: INSTRUCTIONS.md, WORKFLOW.md, ROADMAP.md
  - API docs: ANTHROPIC-API-FIX.md, claude-4-quick-reference.md
  - User guides: cli-usage-multipass.md, smart-file-selection.md, token-counting-multipass.md

- Add docs/README.md with directory structure documentation

- Configure TypeScript path aliases for cleaner imports:
  - @src/* -> src/*
  - @utils/* -> src/utils/*
  - @clients/* -> src/clients/*
  - @types/* -> src/types/*
  - @strategies/* -> src/strategies/*
  - @core/* -> src/core/*
  - @prompts/* -> src/prompts/*

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,14 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@src/*": ["src/*"],
+      "@utils/*": ["src/utils/*"],
+      "@clients/*": ["src/clients/*"],
+      "@types/*": ["src/types/*"],
+      "@strategies/*": ["src/strategies/*"],
+      "@core/*": ["src/core/*"],
+      "@prompts/*": ["src/prompts/*"]
     },
     "noUnusedLocals": false,
     "noUnusedParameters": false,
