--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "local": "ts-node --transpile-only -r tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "npm run validate:prompts && jest --no-cache",
+    "test": "npm run validate:prompts && vitest run",
     "test:e2e": "node scripts/e2e-test.js",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:model": "ts-node src/index.ts model-test",
     "test:build": "ts-node src/index.ts test-build --json",
     "list:models": "ts-node src/list-models.ts",
@@ -107,10 +107,11 @@
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^13.0.7",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.17.32",
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "@vitest/ui": "^3.2.1",
     "babel-jest": "^29.7.0",
     "depcheck": "^1.4.7",
     "esbuild": "^0.25.3",
@@ -125,7 +126,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.4"
+    "vitest": "^3.2.1"
   },
   "overrides": {
     "esbuild": "^0.25.3"
