--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ AI_CODE_REVIEW_CONTEXT=PROJECT.md
 # Default model
 AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 
+# Semantic chunking configuration
+# Enable semantic chunking for intelligent code analysis (default: true)
+# Set to 'false' to disable semantic chunking and use traditional token-based chunking
+AI_CODE_REVIEW_ENABLE_SEMANTIC_CHUNKING=true
+
 # GitHub Projects integration
 # GitHub API token for accessing GitHub Projects
 GITHUB_TOKEN=your_github_token_here
