--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "prebuild": "rm -rf dist && node scripts/sync-version.js",
+    "prebuild": "rm -rf dist",
     "build": "npm run test && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js && node scripts/sync-model-maps.js",
     "build:types": "tsc --emitDeclarationOnly",
     "ci:local": "./scripts/ci-local.sh",
@@ -25,10 +25,10 @@
     "test:latest": "ts-node src/test-latest.ts",
     "test:api": "ts-node src/test-api-connections.ts",
     "validate:models": "node scripts/validate-models.js",
-    "version:sync": "node scripts/sync-version.js",
+
     "models:sync": "node scripts/sync-model-maps.js",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "npm run version:sync",
+    "prepublishOnly": "npm run build",
     "local-review": "./scripts/runners/local-ai-review.sh",
     "built-review": "./scripts/runners/built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
