--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "test:latest": "ts-node src/test-latest.ts",
     "test:api": "ts-node src/test-api-connections.ts",
     "validate:models": "node scripts/validate-models.js",
-
     "models:sync": "node scripts/sync-model-maps.js",
     "prepare-package": "./scripts/prepare-package.sh",
     "prepublishOnly": "npm run build",
@@ -77,6 +76,7 @@
     "@anthropic-ai/tokenizer": "^0.0.4",
     "@google/generative-ai": "^0.24.0",
     "@langchain/core": "^0.3.44",
+    "@types/node-fetch": "^2.6.12",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "dompurify": "^3.2.5",
@@ -91,6 +91,7 @@
     "jsdom": "^26.0.0",
     "langchain": "^0.3.21",
     "markdown-it": "^13.0.2",
+    "node-fetch": "^3.3.2",
     "tree-sitter": "^0.21.1",
     "tree-sitter-php": "^0.22.8",
     "tree-sitter-python": "^0.21.0",
