Fix CI pipeline issues
- Add missing node-fetch and @types/node-fetch dependencies
- Fix package.json scripts to use pnpm consistently
- Resolve Vitest ESM compatibility issues by using .mjs config
- Create generate-version.js script to generate src/version.ts
- Fix TypeScript and ESLint errors
- Remove unused imports and variables
- Update function signatures to match usage

--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "prebuild": "rm -rf dist",
-    "build": "npm run test && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js && node scripts/sync-model-maps.js",
-    "build:types": "npm run generate-version && tsc --emitDeclarationOnly",
+    "prebuild": "rm -rf dist && node scripts/sync-version.js",
+    "build": "pnpm run test && pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js && node scripts/sync-model-maps.js",
+    "build:types": "pnpm run generate-version && tsc --emitDeclarationOnly",
     "ci:local": "./scripts/ci-local.sh",
     "postbuild": "./scripts/link-global.sh",
     "start": "node dist/index.js",
     "dev": "ts-node --transpile-only src/index.ts",
     "local": "ts-node --transpile-only -r tsconfig-paths/register src/index.ts",
-    "lint": "npm run generate-version && eslint . --ext .ts --max-warnings 1000",
+    "lint": "pnpm run generate-version && eslint . --ext .ts --max-warnings 1000",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "npm run generate-version && npm run validate:prompts && vitest run",
+    "test": "pnpm run generate-version && pnpm run validate:prompts && vitest run --config vitest.config.mjs",
     "test:e2e": "node scripts/e2e-test.js",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --config vitest.config.mjs",
+    "test:coverage": "vitest run --coverage --config vitest.config.mjs",
     "test:model": "ts-node src/index.ts model-test",
     "test:build": "ts-node src/index.ts test-build --json",
     "list:models": "ts-node src/list-models.ts",
@@ -27,15 +27,15 @@
     "validate:models": "node scripts/validate-models.js",
     "models:sync": "node scripts/sync-model-maps.js",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm run version:sync",
     "local-review": "./scripts/runners/local-ai-review.sh",
     "built-review": "./scripts/runners/built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
     "validate:prompts": "node scripts/validate-prompts.js",
     "update:prompts": "node scripts/update-prompts-frontmatter.js",
-    "generate-version": "node scripts/generate-version.js",
-    "quick-build": "npm run generate-version && npm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
-    "consolidate": "ts-node scripts/consolidate-review.ts"
+    "quick-build": "pnpm run generate-version && pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
+    "consolidate": "ts-node scripts/consolidate-review.ts",
+    "generate-version": "node scripts/generate-version.js"
   },
   "keywords": [
     "code-review",
