--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "tree-sitter-python": "^0.21.0",
     "tree-sitter-ruby": "^0.21.0",
     "tree-sitter-typescript": "^0.21.2",
+    "yaml": "^2.8.0",
     "yargs": "^17.7.2",
     "zod": "^3.24.2"
   },
