--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:watch": "vitest --config vitest.config.mjs",
     "test:coverage": "vitest run --coverage --config vitest.config.mjs",
     "test:model": "ts-node src/index.ts model-test",
+    "test:extract-patterns": "node scripts/tests/extract-patterns/run-phase2-tests.js",
+    "test:extract-patterns:real-api": "node scripts/tests/extract-patterns/test-real-api.js",
+    "test:extract-patterns:quality": "node scripts/tests/extract-patterns/validate-output-quality.js",
+    "test:extract-patterns:external": "node scripts/tests/extract-patterns/test-external-projects.js",
     "test:build": "ts-node src/index.ts test-build --json",
     "list:models": "ts-node src/list-models.ts",
     "test:latest": "ts-node src/test-latest.ts",
