--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "prebuild": "rm -rf dist && node scripts/sync-version.js",
+    "prebuild": "rm -rf dist && node scripts/generate-version.js",
     "build": "pnpm run test && pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js && node scripts/sync-model-maps.js",
     "build:types": "pnpm run generate-version && tsc --emitDeclarationOnly",
     "ci:local": "./scripts/ci-local.sh",
