feat: major v4.5.0 release - MCP workflow, documentation overhaul, and project organization
## New Features

### MCP Workflow Integration
- Add `ai-code-review init` command for project configuration
  - Interactive setup for OpenRouter API keys
  - Validates API keys with test calls
  - Creates `.ai-code-review/config.json` for project-level settings
  - Auto-updates .gitignore to protect secrets

- Add `ai-code-review install` command for MCP server registration
  - Auto-detects project toolchain (Node.js, Python, Go, Rust, Ruby, Java, PHP, .NET)
  - Creates `.mcp.json` configuration
  - Registers with Claude Desktop automatically
  - Provides setup instructions and verification

- Implement unified MCP `review` tool
  - Accepts files, directories, or PR references
  - Auto-detects target type
  - Returns structured JSON results with status, issues, and recommendations
  - Integrates with existing review strategies

### Documentation Improvements
- Create comprehensive DOCUMENTATION_INDEX.md (85+ files indexed)
- Add docs/DOCUMENTATION_CLEANUP_REPORT.md with quality metrics (96% score)
- Add docs/MCP_WORKFLOW_GUIDE.md with complete setup and usage
- Add docs/MCP_INTEGRATION.md for MCP server integration
- Add docs/WEB_INTEGRATION.md for library usage examples
- Add docs/mcp/SERVER_QUICK_START.md with tool descriptions
- Add docs/reference/PROJECT_ORGANIZATION.md standard
- Fix duplicate content in README.md
- Update version consistency across all docs (v4.4.6 → v4.4.10)
- Replace incorrect mcp-ticketer docs with proper AI Code Review MCP docs

### Project Organization
- Organize MCP documentation into docs/mcp/ subdirectory
- Move temporary files to tmp/ directory
- Move test files to tests/mcp/
- Create standard project structure following PROJECT_ORGANIZATION.md
- Update CLAUDE.md with organization guidelines

### Library Interface
- Add programmatic API exports in src/lib/index.ts
- Add package.json exports for library usage
- Add examples/web-integration.ts wi

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ src/version.ts
 .env.test.local
 .env.production.local
 
+# AI Code Review project configuration (contains API keys)
+.ai-code-review/config.json
+
 # Logs
 logs/
 *.log
@@ -100,3 +103,103 @@ docs/incoming/
 memory.db*
 recess-test/
 examples/coding-test-sample/
+
+# Project-specific temporary files
+.aitrackdown/
+.kuzu-memory-backups/
+.mcp.json
+MCP_PROTOCOL_EXAMPLES.md
+MCP_SERVER_QUICK_START.md
+MCP_SERVER_TEST_REPORT.md
+MCP_TEST_SUMMARY.txt
+MCP_VERIFICATION_INDEX.md
+MCP_WORKFLOW_IMPLEMENTATION.md
+IMPLEMENTATION_SUMMARY.md
+MCP_QUICK_START.md
+ai-code-review-web/
+
+# Added by Claude MPM /mpm-init
+$RECYCLE.BIN/
+*$py.class
+*.backup
+*.bak
+*.cab
+*.cache
+*.cert
+*.cover
+*.crt
+*.db
+*.egg
+*.egg-info/
+*.key
+*.lnk
+*.manifest
+*.mpm.tmp
+*.msi
+*.msm
+*.msp
+*.old
+*.pem
+*.py[cod]
+*.pytest_cache
+*.so
+*.spec
+*.sql
+*.sqlite
+*.sqlite3
+*.sublime-project
+*.sublime-workspace
+*.swo
+*.swp
+*.temp
+*.tmp
+*~
+.Python
+.claude-mpm/*.log
+.claude-mpm/cache/
+.claude-mpm/logs/
+.claude-mpm/sessions/
+.claude-mpm/tmp/
+.claude/cache/
+.claude/sessions/
+.conda/
+.coverage
+.coverage.*
+.eggs/
+.env.*
+.hypothesis/
+.kuzu-memory/
+.mcp-vector-search/
+.nox/
+.npm
+.project
+.pydevproject
+.pytest_cache/
+.pytype/
+.secrets/
+.settings/
+.tox/
+.venv
+.yarn/
+Desktop.ini
+ENV/
+__pycache__/
+_build/
+backup/
+backups/
+conda-env/
+coverage.xml
+credentials/
+develop-eggs/
+docs/_build/
+ehthumbs.db
+env.bak/
+env/
+htmlcov/
+kuzu-memories/
+pip-wheel-metadata/
+site/
+venv.bak/
+venv/
+virtualenv/
+wheels/
