--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ ai-report/quick-fixes-review---gemini-2-5-pro-2025-05-20T20-03-00-100Z.md
 
 # Incoming documentation (temporary files)
 docs/incoming/
+docs/archive/
 .claude-mpm/
 .claude-pm/
 .claude/
